fixed input fields by adjusting z-index

--- a/style.css
+++ b/style.css
@@ -206,14 +206,14 @@ h1, h2, h3 {font-family: Anton, sans-serif;}
     .header-item-1{
         order:1;
         top: 0px; 
-        z-index: 3;
+        z-index: 4;
     }
     
     
     .header-item-2 {
         margin-top: -8px;
         top: 80px;
-        z-index: 3;
+        z-index: 4;
         order: 2;
     }
     
@@ -645,14 +645,16 @@ h1 .color-text {color: var(--yellowish);}
     width: 100%;
     height: 250px;
     margin: 0;
-    z-index: 99;
-    
 }
 
+.call-to-action-head, .call-to-action-text {
+    position: relative;
+    z-index: 3
+}
 .bg-image {
     position: relative;
     background: #291C07 url("img/yamaha_tenere_bg-img_small.jpg") no-repeat 50% 30%;
-    z-index: -2;
+    z-index: 1;
 }
 
 .overlay {
@@ -661,19 +663,17 @@ h1 .color-text {color: var(--yellowish);}
     width: 100%;
     height: 250px;
     background-color: var(--overlay);
-    z-index: -1;
+    z-index: 2;
 }
 
 
 .call-to-action-head, .call-to-action-text, .form {
     text-align: center;
-    margin:  auto;
-    z-index: 1;
+    margin:  auto;   
 }
 
 .form { 
     margin-top: 1.5em;
-    z-index: 99;
 }
 /* background image change for wider screens
 */
@@ -683,7 +683,6 @@ h1 .color-text {color: var(--yellowish);}
     .bg-image {
         position: relative;
         background: #291C07 url("img/yamaha_tenere_bg-img_big.jpg") no-repeat 50% 60%;
-        z-index: -2;
     }
     
 }
@@ -699,7 +698,6 @@ h1 .color-text {color: var(--yellowish);}
 .margin-top {margin-top: 3.125em;}
 
 .email {
-    display: inline-block;
     width: 300px;
     height: 32px;
     border: none;
@@ -719,7 +717,11 @@ h1 .color-text {color: var(--yellowish);}
 
 .form {
     margin-left: 4px;
-    z-index: 2;
+}
+
+.email, .button {
+    position: relative;
+    z-index: 3;
 }
 /* Appearance
 */
@@ -734,6 +736,14 @@ h1 .color-text {color: var(--yellowish);}
     letter-spacing: 1px;
 }
 
+.email {
+    background-color: GhostWhite;
+    border-radius: 15px 15px 0 0;
+    font-family: roboto, monospace;
+    font-weight: bolder;
+    text-align: center;
+}
+
 .button {
     background-color: var(--blueish);
     color: var(--lightest-color);
@@ -745,12 +755,7 @@ h1 .color-text {color: var(--yellowish);}
     border-radius: 0 0 15px 15px;
 }
 
-.email {
-    background-color: GhostWhite;
-    border-radius: 15px 15px 0 0;
-    font-family: roboto, monospace;
-    text-align: center;
-}
+
 
 /*==================================================
                 VIDEO SECTION
